# mdremotifier

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.md.jinja2  mypy.ini  pyproject.toml  pyrightconfig.json
.github/: README.md.jinja2  README.remotified.md  _license-header  demo.tape
.github/workflows/: build-and-test.yml
examples/: LONG-EXAMPLE.md  SIMPLE.md  long-example.sh  simple-local-docker_example.sh  simple-remote-docker_example-noautorun.sh  simple_by_import.py  simple_by_import_example.sh  simple_example.sh  simple_example.sh.jinja2
mdremotifier/: __init__.py  cli.py  mdremotifier.py
mdremotifier/examples/: EXAMPLE.md  EXAMPLE.remotified.md  LONG-EXAMPLE.remotified.md  SIMPLE.remotified.md  example.sh  local-docker-example.sh  local-docker_example.sh  long-example.sh  remote-docker_example-noautorun.sh  simple_example.sh  simple_example.sh.jinja2
scripts/: deploy-to-pypi.sh  format.sh  generate-examples.sh  generate-readme.sh  generate.sh  pre.sh  quickrun.sh  run-all-examples.sh  run-all-tests.sh  run-edit-mode-generate-animation.sh  run-edit-mode-smoke-test.sh  run-wheel-smoke-test.sh  type-check.sh
