[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdremotifier"
version = "0.4.0"
description = "Remotify local links in README.md."
authors = [{name = "AYF", email = "realazthat@gmail.com"}]
license = {file = "LICENSE.md"}
readme = ".github/README.remotified.md"
requires-python = ">=3.8"
classifiers = [
  "Operating System :: OS Independent",
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12'
]
dependencies = [
  "beautifulsoup4 >=4,<5",
  "types-beautifulsoup4",
  "bs4==0.0.2",
  "colorama >=0.4,<1",
  'importlib-metadata; python_version < "3.8"',
  "mistletoe >=1,<2",
  "rich >=13,<14",
  "rich-argparse >=1,<2",
  "soupsieve >=2.0,<3",
  "types-colorama >=0.4,<1",
  "typing-extensions >=4,<5"
]
keywords = [
  "github",
  "markdown",
  "readme",
  "documentation",
  "preprocessor",
  "documentation-tool",
  "readme-md"
]

[project.optional-dependencies]
# Set of dependencies that are known to work. To add a new dependency here, add
# a version range to the `projecct.dependencies` section above, and then run
# `EXTRA=prod bash scripts/pin-extra-reqs.sh`. Optionally, delete all the
# contents to repin all the dependencies (probably a good idea to do once in a
# while).
prod = [
  "beautifulsoup4==4.12.3",
  "bs4==0.0.2",
  "colorama==0.4.6",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "mistletoe==1.3.0",
  "pygments==2.17.2",
  "rich==13.7.1",
  "rich-argparse==1.4.0",
  "soupsieve==2.5",
  "types-beautifulsoup4==4.12.0.20240229",
  "types-colorama==0.4.15.20240311",
  "types-html5lib==1.1.11.20240228",
  "typing-extensions==4.11.0"
]
# Set of dev dependencies, all pinned, so that they are known to work. To add a
# new dependency here, add the unpinned package name here, and then run
# `EXTRA=dev bash scripts/pin-extra-reqs.sh`.
dev = [
  "argcomplete==3.3.0",
  "autoflake==2.3.1",
  "backports-tarfile==1.1.1",
  "beautifulsoup4==4.12.3",
  "bs4==0.0.2",
  "certifi==2024.2.2",
  "cffi==1.16.0",
  "cfgv==3.4.0",
  "changeguard==0.3.1",
  "charset-normalizer==3.3.2",
  "colorama==0.4.6",
  "cryptography==42.0.5",
  "defusedxml==0.7.1",
  "distlib==0.3.8",
  "docutils==0.20.1",
  "filelock==3.13.4",
  "identify==2.5.36",
  "idna==3.7",
  "importlib-metadata==7.1.0",
  "importlib-resources==6.4.0",
  "isort==5.13.2",
  "jaraco-classes==3.4.0",
  "jaraco-context==5.3.0",
  "jaraco-functools==4.0.1",
  "jeepney==0.8.0",
  "jinja2==3.1.3",
  "keyring==25.2.0",
  "markdown-it-py==3.0.0",
  "markupsafe==2.1.5",
  "mdurl==0.1.2",
  "mdreftidy==0.3.0",
  "mistletoe==1.3.0",
  "more-itertools==10.2.0",
  "mypy==1.8.0",
  "mypy-extensions==1.0.0",
  "nh3==0.2.17",
  "nodeenv==1.8.0",
  "pathspec==0.12.1",
  "pexpect==4.9.0",
  "pkginfo==1.10.0",
  "platformdirs==4.2.1",
  "pre-commit==3.5.0",
  "ptyprocess==0.7.0",
  "pycparser==2.22",
  "pyflakes==3.2.0",
  "pygments==2.17.2",
  "pyright==1.1.352",
  "pyyaml==6.0.1",
  "readme-renderer==43.0",
  "requests==2.31.0",
  "requests-toolbelt==1.0.0",
  "rfc3986==2.0.0",
  "rich==13.7.1",
  "rich-argparse==1.4.0",
  "secretstorage==3.3.3",
  "semver==3.0.2",
  "snipinator==2.2.0",
  "soupsieve==2.5",
  "toml-sort==0.23.1",
  "tomli==2.0.1",
  "tomlkit==0.12.4",
  "twine==5.0.0",
  "types-beautifulsoup4==4.12.0.20240229",
  "types-colorama==0.4.15.20240311",
  "types-html5lib==1.1.11.20240228",
  "types-pyyaml==6.0.12.20240311",
  "typing-extensions==4.10.0",
  "urllib3==2.2.1",
  "virtualenv==20.26.0",
  "xmltodict==0.13.0",
  "yapf==0.40.2",
  "yq==3.2.3",
  "zipp==3.18.1"
]

[project.scripts]
mdremotifier = "mdremotifier.cli:main"

[project.urls]
Homepage = "https://github.com/realazthat/mdremotifier"
Documentation = "https://github.com/realazthat/mdremotifier"
Repository = "https://github.com/realazthat/mdremotifier"

[tool.mdremotifier-project-metadata]
last_release = "0.4.0"
last_stable_release = "0.4.0"

[tool.setuptools]
packages = ["mdremotifier"]

[tool.tomlsort]
